# backend/pkg/types/budgets.go
@@ -7,33 +7,10 @@ import (
 	"gopkg.in/guregu/null.v4"
 )
 
-type CreateMonthlyBudget struct {
-	Month    time.Time `json:"month" db:"month" binding:"required"`
-	Amount   string    `json:"amount" db:"amount" binding:"required"`
-	Category string    `json:"category" db:"category" binding:"required"`
-}
-
 type CreateMonthlyBudgetAllocation struct {
 	Manager  null.String `json:"manager" db:"manager" binding:"required"`
 	Category string      `json:"category" db:"category" binding:"required"`
 	Amount   string      `json:"amount" db:"amount" binding:"required"`
-}
-
-type MonthlyBudget struct {
-	ID        uuid.UUID `json:"id" db:"id"`
-	Month     time.Time `json:"month" db:"month"`
-	Amount    string    `json:"amount" db:"amount"`
-	Category  string    `json:"category" db:"category"`
-	CreatedAt time.Time `json:"createdAt" db:"created_at"`
-	UpdatedAt time.Time `json:"updatedAt" db:"updated_at"`
-}
-
-func (mb MonthlyBudget) ToCreate() CreateMonthlyBudget {
-	return CreateMonthlyBudget{
-		Month:    mb.Month,
-		Amount:   mb.Amount,
-		Category: mb.Category,
-	}
 }
 
 type MonthlyBudgetAllocation struct {
